@@ -1,3 +1,4 @@
+* new flavor of material/Crystal definition from fractional atomic coordinates
 * bugfix in derivative functions (xu.math.functions)
 * effectiveDensity slicing for XRR simulations, thanks to MM
 * new possibility to transform unit cells and find symmetries
